<resources>
    <string name="app_name">8_Puzzle</string>
    <string name="appTitle">Ocho Puzzle</string>

    <string name="Restart">Reiniciar Juego</string>
    <string name="message">Mensaje</string>
    <string name="messagedisorder">¡Tablero desordenado de forma aleatoria!</string>
    <string name="messageverifyWin">¡Felicidades! Completaste el puzzle correctamente!</string>
    <string name="messageverifyNoWin">¡El juego aún no está resuelto. ¡Sigue intentando!!</string>
    <string name="messageRestart">¡Tablero restaurado correctamente!</string>
    <string name="Disorder">Desordenar</string>
    <string name="Verify">Verificar</string>
    <string name="textButton">1</string>

</resources>