<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/TXVTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appTitle"
        android:textSize="@dimen/textSizeTitle"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop"
        />
    <GridLayout
        android:id="@+id/GRLTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TXVTitle"
        android:layout_marginTop="@dimen/marginTopFirst"
        android:layout_centerHorizontal="true"
        android:columnCount="4"
        android:rowCount="4"
        android:alignmentMode="alignMargins"
        >

        <Button
            android:id="@+id/BTN00"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/buttonMargin"
            android:text="@string/textButton"
            android:textSize="@dimen/buttonTextSize"
            android:insetTop="@dimen/buttonPaddingTop"
            android:insetBottom="@dimen/buttonPaddingBottom"
            android:insetLeft="@dimen/buttonPaddingLeft"
            android:insetRight="@dimen/buttonPaddingRight"/>
        <Button
            android:id="@+id/BTN01"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/buttonMargin"
            android:text="@string/textButton"
            android:textSize="@dimen/buttonTextSize"
            android:insetTop="@dimen/buttonPaddingTop"
            android:insetBottom="@dimen/buttonPaddingBottom"
            android:insetLeft="@dimen/buttonPaddingLeft"
            android:insetRight="@dimen/buttonPaddingRight"/>
        <Button
            android:id="@+id/BTN02"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/buttonMargin"
            android:text="@string/textButton"
            android:textSize="@dimen/buttonTextSize"
            android:insetTop="@dimen/buttonPaddingTop"
            android:insetBottom="@dimen/buttonPaddingBottom"
            android:insetLeft="@dimen/buttonPaddingLeft"
            android:insetRight="@dimen/buttonPaddingRight"/>
        <Button
            android:id="@+id/BTN03"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/buttonMargin"
            android:text="@string/textButton"
            android:textSize="@dimen/buttonTextSize"
            android:insetTop="@dimen/buttonPaddingTop"
            android:insetBottom="@dimen/buttonPaddingBottom"
            android:insetLeft="@dimen/buttonPaddingLeft"
            android:insetRight="@dimen/buttonPaddingRight"/>
        <Button
            android:id="@+id/BTN10"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/buttonMargin"
            android:text="@string/textButton"
            android:textSize="@dimen/buttonTextSize"
            android:insetTop="@dimen/buttonPaddingTop"
            android:insetBottom="@dimen/buttonPaddingBottom"
            android:insetLeft="@dimen/buttonPaddingLeft"
            android:insetRight="@dimen/buttonPaddingRight"/>
        <Button
            android:id="@+id/BTN11"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/buttonMargin"
            android:text="@string/textButton"
            android:textSize="@dimen/buttonTextSize"
            android:insetTop="@dimen/buttonPaddingTop"
            android:insetBottom="@dimen/buttonPaddingBottom"
            android:insetLeft="@dimen/buttonPaddingLeft"
            android:insetRight="@dimen/buttonPaddingRight"/>
        <Button
            android:id="@+id/BTN12"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/buttonMargin"
            android:text="@string/textButton"
            android:textSize="@dimen/buttonTextSize"
            android:insetTop="@dimen/buttonPaddingTop"
            android:insetBottom="@dimen/buttonPaddingBottom"
            android:insetLeft="@dimen/buttonPaddingLeft"
            android:insetRight="@dimen/buttonPaddingRight"/>
        <Button
            android:id="@+id/BTN13"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/buttonMargin"
            android:text="@string/textButton"
            android:textSize="@dimen/buttonTextSize"
            android:insetTop="@dimen/buttonPaddingTop"
            android:insetBottom="@dimen/buttonPaddingBottom"
            android:insetLeft="@dimen/buttonPaddingLeft"
            android:insetRight="@dimen/buttonPaddingRight"/>
        <Button
            android:id="@+id/BTN20"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/buttonMargin"
            android:text="@string/textButton"
            android:textSize="@dimen/buttonTextSize"
            android:insetTop="@dimen/buttonPaddingTop"
            android:insetBottom="@dimen/buttonPaddingBottom"
            android:insetLeft="@dimen/buttonPaddingLeft"
            android:insetRight="@dimen/buttonPaddingRight"/>
        <Button
            android:id="@+id/BTN21"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/buttonMargin"
            android:text="@string/textButton"
            android:textSize="@dimen/buttonTextSize"
            android:insetTop="@dimen/buttonPaddingTop"
            android:insetBottom="@dimen/buttonPaddingBottom"
            android:insetLeft="@dimen/buttonPaddingLeft"
            android:insetRight="@dimen/buttonPaddingRight"/>
        <Button
            android:id="@+id/BTN22"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/buttonMargin"
            android:text="@string/textButton"
            android:textSize="@dimen/buttonTextSize"
            android:insetTop="@dimen/buttonPaddingTop"
            android:insetBottom="@dimen/buttonPaddingBottom"
            android:insetLeft="@dimen/buttonPaddingLeft"
            android:insetRight="@dimen/buttonPaddingRight"/>
        <Button
            android:id="@+id/BTN23"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/buttonMargin"
            android:text="@string/textButton"
            android:textSize="@dimen/buttonTextSize"
            android:insetTop="@dimen/buttonPaddingTop"
            android:insetBottom="@dimen/buttonPaddingBottom"
            android:insetLeft="@dimen/buttonPaddingLeft"
            android:insetRight="@dimen/buttonPaddingRight"/>
        <Button
            android:id="@+id/BTN30"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/buttonMargin"
            android:text="@string/textButton"
            android:textSize="@dimen/buttonTextSize"
            android:insetTop="@dimen/buttonPaddingTop"
            android:insetBottom="@dimen/buttonPaddingBottom"
            android:insetLeft="@dimen/buttonPaddingLeft"
            android:insetRight="@dimen/buttonPaddingRight"/>
        <Button
            android:id="@+id/BTN31"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/buttonMargin"
            android:text="@string/textButton"
            android:textSize="@dimen/buttonTextSize"
            android:insetTop="@dimen/buttonPaddingTop"
            android:insetBottom="@dimen/buttonPaddingBottom"
            android:insetLeft="@dimen/buttonPaddingLeft"
            android:insetRight="@dimen/buttonPaddingRight"/>
        <Button
            android:id="@+id/BTN32"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/buttonMargin"
            android:text="@string/textButton"
            android:textSize="@dimen/buttonTextSize"
            android:insetTop="@dimen/buttonPaddingTop"
            android:insetBottom="@dimen/buttonPaddingBottom"
            android:insetLeft="@dimen/buttonPaddingLeft"
            android:insetRight="@dimen/buttonPaddingRight"/>
        <Button
            android:id="@+id/BTN33"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/buttonMargin"

            android:textSize="@dimen/buttonTextSize"
            android:insetTop="@dimen/buttonPaddingTop"
            android:insetBottom="@dimen/buttonPaddingBottom"
            android:insetLeft="@dimen/buttonPaddingLeft"
            android:insetRight="@dimen/buttonPaddingRight"/>
    </GridLayout>
    <TextView
        android:id="@+id/TXVMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GRLTable"
        android:text="@string/message"
        android:textSize="@dimen/textSizeNormal"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTopFirst"
        android:textColor="@color/purple_700"
        />
    <Button
        android:id="@+id/BTNRestart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TXVMessage"
        android:layout_centerHorizontal="true"
        android:text="@string/Restart"
        android:layout_marginTop="@dimen/marginTopFirst"
        android:textSize="@dimen/textSizeNormal"
        android:visibility="visible"
        android:insetTop="@dimen/buttonPaddingTop"
        android:insetBottom="@dimen/buttonPaddingBottom"
        android:insetLeft="@dimen/buttonPaddingLeft"
        android:insetRight="@dimen/buttonPaddingRight"
        />
    <Button
        android:id="@+id/BTNDisorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/BTNRestart"
        android:layout_centerHorizontal="true"
        android:text="@string/Disorder"
        android:layout_marginTop="@dimen/marginTopFirst"
        android:textSize="@dimen/textSizeNormal"
        android:visibility="visible"
        android:insetTop="@dimen/buttonPaddingTop"
        android:insetBottom="@dimen/buttonPaddingBottom"
        android:insetLeft="@dimen/buttonPaddingLeft"
        android:insetRight="@dimen/buttonPaddingRight"
        />
    <Button
        android:id="@+id/BTNVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/BTNDisorder"
        android:layout_centerHorizontal="true"
        android:text="@string/Verify"
        android:layout_marginTop="@dimen/marginTopFirst"
        android:textSize="@dimen/textSizeNormal"
        android:visibility="visible"
        android:insetTop="@dimen/buttonPaddingTop"
        android:insetBottom="@dimen/buttonPaddingBottom"
        android:insetLeft="@dimen/buttonPaddingLeft"
        android:insetRight="@dimen/buttonPaddingRight"
        />

</RelativeLayout>